fix broken layout

--- a/src/components/dashboards/style.css
+++ b/src/components/dashboards/style.css
@@ -15,7 +15,7 @@
 .small-text {
   font-size: 12px;
 }
-.index {
+.index-dashboard {
   margin-top: 60px;
 }
 
